samples/_failures_safe/1761094365_f08f65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64dbf6b2.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_64dbf6b2.c:181:9: error: expected expression at end of input
  181 |         } else
      |         ^
./samples/SAFE/__tmp_64dbf6b2.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_64dbf6b2.c:181:9: error: expected declaration or statement at end of input
